--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     
 <section class="contenedor">
     <!-- ESTA ES UNA IMAGEN -->
-    <div><img src="logo.png" alt="" width="200"></div>
+    <div><img src="logo.png" alt="" width="160"></div>
 
     <!-- ESTE ES EL APARTADO DE LOGIN -->
     <div class="login">
-        <p>Iniciar sesión:</p>
+        <h4>AGENDA BANDA</h4>
+        <h4>Inicia sesión:</h4>
         <input type="text" class="usuario" placeholder="Ingresa el usuario:">
         <input type="text" class="password" placeholder="Ingresa la contraseña:">
-        <div class="boton">Crear nueva cuenta</div>
+        <div class="boton" id="boton">Inicia sesión</div>
     </div>
 
     <!-- ESTE ES EL APARTADO DE CREAR CUENTA -->
-    <div class="boton">Crear nueva cuenta</div>
+    <a href="crear-cuenta.html" class="boton">Crear nueva cuenta</a>
 </section>
 
-<script src="scripts.js"></script>
+<script src="js/inicia-sesion.js"></script>
 </body>
 </html>
