--- a/bienvenida.html
+++ b/bienvenida.html
@@ -38,6 +38,6 @@
   </article>
 </dialog>
 
-<script src="js/bienvenida.js"></script>
+<script src="js/bienvenida.js?2000"></script>
 </body>
 </html>
