--- a/crear-cuenta.html
+++ b/crear-cuenta.html
@@ -26,6 +26,6 @@
     <a href="index.html" class="boton">Inicia sesión</a>
 </section>
 
-<script src="js/crear-cuenta.js"></script>
+<script src="js/crear-cuenta.js?2000"></script>
 </body>
 </html>
