--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <a href="crear-cuenta.html" class="boton">Crear nueva cuenta</a>
 </section>
 
-<script src="js/inicia-sesion.js"></script>
+<script src="js/inicia-sesion.js?2000"></script>
 </body>
 </html>
